--- a/ec/module/ui_component.html
+++ b/ec/module/ui_component.html
@@ -12,9 +12,9 @@
                         <li role="presentation"><a href="#tab3" aria-controls="form" role="tab" data-toggle="tab">Form</a></li>
                         <li role="presentation"><a href="#tab4" aria-controls="tabs" role="tab" data-toggle="tab">Tabs</a></li>
                         <li role="presentation"><a href="#tab5" aria-controls="pagination" role="tab" data-toggle="tab">Pagination</a></li>
-                        <li role="presentation"><a href="#tab6" aria-controls="col" role="tab" data-toggle="tab">Colgroup List</a></li>
-                        <li role="presentation"><a href="#tab7" aria-controls="icon" role="tab" data-toggle="tab">Icon & Label</a></li>
-                        <li role="presentation"><a href="#tab8" aria-controls="logo" role="tab" data-toggle="tab">Mall Logo</a></li>
+                        <li role="presentation"><a href="#tab6" aria-controls="icon" role="tab" data-toggle="tab">Icon & Label</a></li>
+                        <li role="presentation"><a href="#tab7" aria-controls="logo" role="tab" data-toggle="tab">Mall Logo</a></li>
+                        <li role="presentation"><a href="#tab8" aria-controls="tooltip" role="tab" data-toggle="tab">Tooltip</a></li>
                     </ul>
                     <!-- Tab panes -->
                     <div class="tab-content">
@@ -444,130 +444,8 @@
                                     </code></pre>
                                 </div>
                             </div>
-                        </div>
+                        </div>                        
                         <div role="tabpanel" class="tab-pane" id="tab6">
-                            <div class="guide-box">
-                                <div class="guide-row">
-                                    <h2 class="sub-header">테이블 Colgroup List</h2>
-                                    <p class="sub-des">스크롤 테이블 등 사용 시 정의된 colgroup 리스트입니다.</p>
-                                    <table>
-                                        <colgroup>
-                                            <col span="4"/>
-                                        </colgroup>
-                                         <thead>
-                                             <tr>
-                                                 <th scope="col">항목</th>
-                                                 <th scope="col">class</th>
-                                                 <th scope="col">width</th>
-                                                 <th scope="col">code</th>
-                                             </tr>
-                                         </thead>
-                                         <tbody>
-                                             <tr>
-                                                 <th scope="row">체크박스</th>
-                                                 <td>col-check</td>
-                                                 <td>50px</td>
-                                                 <td>&lt;col class="col-check" /&gt;</td>
-                                             </tr>
-                                             <tr>
-                                                 <th scope="row">아코디언 토글버튼</th>
-                                                 <td>col-toggle</td>
-                                                 <td>40px</td>
-                                                 <td>&lt;col class="col-toggle" /&gt;</td>
-                                             </tr>
-                                             <tr>
-                                                 <th scope="row">쇼핑몰 로고</th>
-                                                 <td>col-logo</td>
-                                                 <td>126px</td>
-                                                 <td>&lt;col class="col-logo" /&gt;</td>
-                                             </tr>
-                                             <tr>
-                                                 <th scope="row">상점 이름</th>
-                                                 <td>col-name</td>
-                                                 <td>150px</td>
-                                                 <td>&lt;col class="col-name" /&gt;</td>
-                                             </tr>
-                                             <tr>
-                                                 <th scope="row">ID 노출영역</th>
-                                                 <td>col-id</td>
-                                                 <td>120px</td>
-                                                 <td>&lt;col class="col-id" /&gt;</td>
-                                             </tr>
-                                             <tr>
-                                                 <th scope="row">상태값 노출영역</th>
-                                                 <td>col-status</td>
-                                                 <td>60px</td>
-                                                 <td>&lt;col class="col-status" /&gt;</td>
-                                             </tr>
-                                             <tr>
-                                                 <th scope="row">쇼핑몰 기능</th>
-                                                 <td>col-fnc</td>
-                                                 <td>92px</td>
-                                                 <td>&lt;col class="col-fnc" /&gt;</td>
-                                             </tr>
-                                             <tr>
-                                                 <th scope="row">쇼핑몰 로그인버튼</th>
-                                                 <td>col-login</td>
-                                                 <td>90px</td>
-                                                 <td>&lt;col class="col-login" /&gt;</td>
-                                             </tr>
-                                             <tr>
-                                                 <th scope="row">연결 체크버튼</th>
-                                                 <td>col-join</td>
-                                                 <td>110px</td>
-                                                 <td>&lt;col class="col-join" /&gt;</td>
-                                             </tr>
-                                             <tr>
-                                                 <th scope="row">인증 유효기간</th>
-                                                 <td>col-etc</td>
-                                                 <td>160px</td>
-                                                 <td>&lt;col class="col-etc" /&gt;</td>
-                                             </tr>
-                                             <tr>
-                                                 <th scope="row">추가/복제 버튼</th>
-                                                 <td>col-add</td>
-                                                 <td>70px</td>
-                                                 <td>&lt;col class="col-add" /&gt;</td>
-                                             </tr>
-                                             <tr>
-                                                 <th scope="row">수정 버튼</th>
-                                                 <td>col-edit</td>
-                                                 <td>56px</td>
-                                                 <td>&lt;col class="col-edit" /&gt;</td>
-                                             </tr>
-                                             <tr>
-                                                 <th scope="row">삭제버튼</th>
-                                                 <td>col-del</td>
-                                                 <td>56px</td>
-                                                 <td>&lt;col class="col-del" /&gt;</td>
-                                             </tr>
-                                             <tr>
-                                                 <th scope="row">상품명</th>
-                                                 <td>col-prd</td>
-                                                 <td>360px</td>
-                                                 <td>&lt;col class="col-prd" /&gt;</td>
-                                             </tr>
-                                             <tr>
-                                                 <th scope="row">상품코드</th>
-                                                 <td>col-code</td>
-                                                 <td>140px</td>
-                                                 <td>&lt;col class="col-code" /&gt;</td>
-                                             </tr>
-                                         </tbody>
-                                    </table>
-                                </div>
-                                <div class="guide-code">
-                                    <pre><code class="html">
-                                        &lt;colgroup&gt;
-                                            &lt;col class="col-className"/&gt;
-                                            .
-                                            .
-                                        &lt;/colgroup&gt;
-                                    </code></pre>
-                                </div>
-                            </div>
-                        </div>
-                        <div role="tabpanel" class="tab-pane" id="tab7">
                             <div class="guide-box">     
                                 <div class="guide-row">
                                     <h2 class="sub-header">Badge</h2>
@@ -667,7 +545,7 @@
                                 </div>
                             </div>                            
                         </div>
-                        <div role="tabpanel" class="tab-pane" id="tab8">
+                        <div role="tabpanel" class="tab-pane" id="tab7">
                             <div class="guide-box">
                                 <div class="guide-row">
                                     <h2 class="sub-header">쇼핑몰 로고 List</h2>
@@ -698,6 +576,22 @@
                                         <img src="/ec/resource/images/mall/mall_logo_10.png" alt="Cafe24" />
                                         <img src="/ec/resource/images/mall/mall_logo_11.png" alt="海外販売" />
                                     </code></pre>
+                                </div>
+                            </div>
+                        </div>
+                        <div role="tabpanel" class="tab-pane" id="tab8">
+                            <div class="guide-box">
+                                <div class="guide-row">
+                                    <h2 class="sub-header no-code">Tooltip</h2>
+                                    <div class="sub-des">
+                                        <p>툴팁을 사용할 요소에 <span class="code">tooltip</span>클래스를 추가해주세요.</p>
+                                        <p>툴팁은 요소의 title속성의 값을 보여주기 때문에 title에 보여줄 텍스트를 꼭 입력해주세요.</p>
+                                    </div>
+                                    <div class="guide-code">
+                                        <pre><code class="html">
+                                            <span class="tooltip" title="Tooltip Example">Tooltip Example</span>
+                                        </code></pre>
+                                    </div>
                                 </div>
                             </div>
                         </div>
